# ImGui_Vulkan_Base_App

./: .gitignore  CMakeLists.txt  CMakePresets.json  imgui.ini  vcpkg.json
src/: main.cpp
src/Application/: Application.cpp  Application.h  ApplicationInit.cpp  ApplicationUI.cpp  ApplicationWindows.cpp  CMakeLists.txt  IconConfigurations.h  IconEditorWindow.cpp
src/DesignSystem/: CMakeLists.txt
src/DesignSystem/include/DesignSystem/: DesignSystem.h
src/DesignSystem/include/DesignSystem/Accessibility/: ColorBlindness.h
src/DesignSystem/include/DesignSystem/Override/: Override.h  OverrideManager.h
src/DesignSystem/include/DesignSystem/Persistence/: Serialization.h
src/DesignSystem/include/DesignSystem/Tokens/: Token.h  TokenRegistry.h
src/DesignSystem/include/DesignSystem/core/: Context.h  TokenType.h  TokenValue.h
src/DesignSystem/src/: DesignSystem.cpp
src/DesignSystem/src/Accessibility/: ColorBlindness.cpp
src/DesignSystem/src/Core/: Context.cpp  TokenValue.cpp
src/DesignSystem/src/Override/: Override.cpp  OverrideManager.cpp
src/DesignSystem/src/Persistence/: Serialization.cpp
src/DesignSystem/src/Tokens/: Token.cpp  TokenRegistry.cpp
src/Shortcuts/: CMakeLists.txt
src/Shortcuts/include/Shortcuts/: ShortcutManager.h
src/Shortcuts/src/: ShortcutManager.cpp
src/UI/: CMakeLists.txt
src/UI/include/UI/: FontManager.h  IconManager.h  ShortcutEditor.h  TokenEditor.h
src/UI/src/: FontManager.cpp  IconManager.cpp  ShortcutEditor.cpp  TokenEditor.cpp
src/VectorGraphics/: CMakeLists.txt
src/VectorGraphics/editors/: IconEditorWindow.cpp
src/VectorGraphics/include/VectorGraphics/: IconManager.h  IconMetadata.h
src/VectorGraphics/include/VectorGraphics/editors/: IconEditorWindow.h
src/VectorGraphics/src/: IconManager.cpp
src/tools/icon_compiler/: Cargo.toml
src/tools/icon_compiler/resvg-c-bindings/: Cargo.toml  build.rs
src/tools/icon_compiler/resvg-c-bindings/src/: lib.rs
src/tools/icon_compiler/src/: main.rs
src/tools/resvg-bindings/: Cargo.toml  build.rs
src/tools/resvg-bindings/include/: resvg_c.h
src/tools/resvg-bindings/src/: color_parser.rs  icon_compiler_main.rs  lib.rs
